# falcon-mcp

./: CHANGELOG.md  gemini-extension.json  pyproject.toml  server.json
docs/: changelog.md
